fix layout on mobile and lg display

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,11 +1,10 @@
 body {
-  height: 100vh;
   background-color: $Very-dark-blue-400;
 }
 
 .main-container {
   position: relative;
-  height: 100%;
+  height: max(600px, 100vh);
   width: 100%;
   padding-top: 140px;
 }
